B&L QA/objects/ASR_Sales__c.object
<CustomObject>
    <description>ASR sales data for SU</description>
    <fields>
        <fullName>Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Lookup to the associated Account. Populated by a trigger.
Used by EMEA SU.</description>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>ASR Sales</relationshipLabel>
        <relationshipName>ASR_Sales</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Business_unit__c</fullName>
        <description>Used by EMEA SU.</description>
        <label>Business unit</label>
        <length>5</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Current_Year_Qty_Q1__c</fullName>
        <description>Used by EMEA SU.</description>
        <label>Current Year Qty Q1</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Current_Year_Qty_Q2__c</fullName>
        <description>Used by EMEA SU.</description>
        <label>Current Year Qty Q2</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Current_Year_Qty_Q3__c</fullName>
        <description>Used by EMEA SU.</description>
        <label>Current Year Qty Q3</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Current_Year_Sales_Q1__c</fullName>
        <description>Used by EMEA SU.</description>
        <label>Current Year Sales Q1</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Current_Year_Sales_Q2__c</fullName>
        <description>Used by EMEA SU.</description>
        <label>Current Year Sales Q2</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Current_Year_Sales_Q3__c</fullName>
        <description>Used by EMEA SU.</description>
        <label>Current Year Sales Q3</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Current_Year_Total_Qty__c</fullName>
        <description>Sum of Q1-Q4 units. Used by EMEA SU.</description>
        <formula>Current_Year_Qty_Q1__c + Current_Year_Qty_Q2__c + Current_Year_Qty_Q3__c + Current_Year_Qty_Q4__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Current Year Total (Qty)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Current_Year_Total__c</fullName>
        <description>Sum of Q1 - Q4 Sales. Used by EMEA SU.</description>
        <formula>Current_Year_Sales_Q1__c + Current_Year_Sales_Q2__c + Current_Year_Sales_Q3__c + Current_Year_Sales_Q4__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Current Year Total</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Growth__c</fullName>
        <description>Growth since last year. Used by EMEA SU.</description>
        <formula>IF (Prior_YTD2__c &lt;&gt; 0, 
( ( ( ( Current_Year_Total__c / Prior_YTD2__c ) * 100 ) - 100 ) / 100 ), 
IF ( Current_Year_Total__c &gt; 0 , 1 , 0) 
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Growth (%)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Legacy_System_Id__c</fullName>
        <description>[SETID]-[Ship-to-Id] Used by EMEA SU.</description>
        <label>Legacy System Id</label>
        <length>14</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Prior_YTD2__c</fullName>
        <description>Calculates the approximate sales made at this time last year.
Used by EMEA SU.</description>
        <formula>Prior_Year_Total__c * ROUND ( ( ( Today() - Date ( Year ( Today() ), 1, 1 ) ) / 365 ) , 2 )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Prior YTD2</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Prior_YTD_Qty2__c</fullName>
        <description>Calculates the approximate units sold at this time last year.
Used by EMEA SU.</description>
        <formula>Prior_Year_Total_Qty__c * ROUND ( ( ( Today() - Date ( Year ( Today() ), 1, 1 ) ) / 365 ) , 2 )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Prior YTD (Qty)2</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Prior_YTD_Qty__c</fullName>
        <description>Prior YTD Qty actual figure incl. current month and populated directly by integration</description>
        <label>Prior YTD (Qty)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Prior_YTD__c</fullName>
        <description>Prior YTD actual figure incl. current month and populated directly by integration</description>
        <label>Prior YTD</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Prior_Year_Qty_Q1__c</fullName>
        <description>Used by EMEA SU.</description>
        <label>Prior Year Qty Q1</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Prior_Year_Qty_Q2__c</fullName>
        <description>Used by EMEA SU.</description>
        <label>Prior Year Qty Q2</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Prior_Year_Qty_Q3__c</fullName>
        <description>Used by EMEA SU.</description>
        <label>Prior Year Qty Q3</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Prior_Year_Sales_Q1__c</fullName>
        <description>Used by EMEA SU.</description>
        <label>Prior Year Sales Q1</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Prior_Year_Sales_Q2__c</fullName>
        <description>Used by EMEA SU.</description>
        <label>Prior Year Sales Q2</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Prior_Year_Sales_Q3__c</fullName>
        <description>Used by EMEA SU.</description>
        <label>Prior Year Sales Q3</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Prior_Year_Total_Qty__c</fullName>
        <description>Summary of prior year unit sales Q1-Q4. Used by EMEA SU.</description>
        <formula>Prior_Year_Qty_Q1__c + Prior_Year_Qty_Q2__c + Prior_Year_Qty_Q3__c + Prior_Year_Qty_Q4__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Prior Year Total (Qty)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Prior_Year_Total__c</fullName>
        <description>Summary of prior year sales Q1-Q4. Used by EMEA SU.</description>
        <formula>Prior_Year_Sales_Q1__c + Prior_Year_Sales_Q2__c + Prior_Year_Sales_Q3__c + Prior_Year_Sales_Q4__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Prior Year Total</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Product_Description__c</fullName>
        <description>Used by EMEA SU.</description>
        <label>Product Description</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Product_Level_Id__c</fullName>
        <description>Used by EMEA SU.</description>
        <label>Product Level Id</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Qty_Growth__c</fullName>
        <description>Estimated unit sales this time last year. Used by EMEA SU.</description>
        <formula>IF (Prior_YTD_Qty2__c &lt;&gt; 0, 
( ( ( ( Current_Year_Total_Qty__c / Prior_YTD_Qty2__c ) * 100 ) - 100 ) / 100 ), 
IF ( Current_Year_Total_Qty__c &gt; 0 , 1 , 0) 
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Qty Growth (%)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Ship_To_ID__c</fullName>
        <description>Used by EMEA SU.</description>
        <formula>MID(Legacy_System_Id__c, FIND(Legacy_System_Id__c,&apos;-&apos;,0)+1,LEN(Legacy_System_Id__c)-FIND(Legacy_System_Id__c,&apos;-&apos;,0)+1)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Ship To ID</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TR_Desc__c</fullName>
        <description>Used by EMEA SU.</description>
        <label>TR Desc</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Year__c</fullName>
        <description>[YYYY] Used by EMEA SU.</description>
        <label>Year</label>
        <length>4</length>
        <type>Text</type>
    </fields>
    <label>ASR Sales</label>
    <nameField>
        <displayFormat>SU-SD{0000000000}</displayFormat>
        <label>ASR Sales Data ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>ASR Sales</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>